change details for plugin info

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@
     verical-align:middle;
 }
 
-/* to remove */
+/* to be removed */
 #fedauth__manager .provid {
     font-size: 0.8em;
     color: #888;
