--- a/style.css
+++ b/style.css
@@ -79,8 +79,21 @@
 }
 
 #fedauth__manager .details {
-    padding: 5px;
-    border: dotted 1px red;
+    display: none;
+    margin-left: 31px;
+    padding: 5px 5px 0px;
+    font-size: 0.8em;
+    line-height: 1.2em;
+    color: #555;
+}
+
+#fedauth__manager .imgdetails {
+    background-color: #fff;
+    border: solid 1px #888;
+    padding: 3px;
+    border-radius: 3px;
+    margin: 3px 0px;
+    vertical-align: middle;
 }
 
 #fedauth__manager .lprovs fieldset.buttons,
@@ -94,6 +107,6 @@
 }
 
 #fedauth__manager .floatimg {
-    margin: 0px 0.3em 0px 1em;
+    margin: 0px 5px 0px 15px;
     float: left;
 }
