--- a/style.css
+++ b/style.css
@@ -55,6 +55,22 @@
     background: #eee;
 }
 
+#fedauth__manager fieldset.disabled,
+#fedauth__manager fieldset.disabledeven {
+    background: #ffecec;
+}
+
+#fedauth__manager fieldset.disabled label,
+#fedauth__manager fieldset.disabledeven label {
+    color: #55555;
+    opacity: 0.7;
+}
+#fedauth__manager fieldset.disabled label img,
+#fedauth__manager fieldset.disabledeven label img {
+/*    opacity: .7; -> this kills image display under Opera */
+    filter: alpha(opacity=70);
+}
+
 #fedauth__manager .lprovs .legend,
 #fedauth__manager .sprovs .legend {
     background: inherit;
@@ -69,6 +85,14 @@
     padding: 0;
     clear: none;
     verical-align:middle;
+}
+
+#fedauth__manager .legend .disabled {
+    font-size: 0.6em;
+    opacity: 0.7;
+    color: #555;
+    font-style: italic;
+    padding: 0px 0px 2px 10px;
 }
 
 #fedauth__manager .lprovs .enable,
